--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,10 @@ android {
             cmake {
                 cppFlags "-frtti -fexceptions"
             }
+            ndk{
+//            abiFilters here
+//        abiFilters "arm64-v8a"
+            }
         }
     }
     buildTypes {
@@ -26,7 +30,11 @@ android {
         cmake {
             path "CMakeLists.txt"
         }
+
+
+
     }
+
 }
 
 dependencies {
@@ -38,4 +46,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
 }
